Добавлена локализация на английский язык. Так же добавлено немного рефакторинга кода.

--- a/SearchForAirTickets/SearchForAirTickets/Services/Localized/en.lproj/InfoPlist.strings
+++ b/SearchForAirTickets/SearchForAirTickets/Services/Localized/en.lproj/InfoPlist.strings
@@ -5,5 +5,5 @@
   Created by Alexandr Evtodiy on 31.03.2021.
   
 */
-"CFBundleDisplayName" = "Avia tickets";
-"CFBundleName" = "Avia tickets";
+"CFBundleDisplayName" = "AVIA TICKETS";
+"CFBundleName" = "AVIA TICKETS";
