--- a/SearchForAirTickets/SearchForAirTickets/Services/Localized/en.lproj/Localizable.strings
+++ b/SearchForAirTickets/SearchForAirTickets/Services/Localized/en.lproj/Localizable.strings
@@ -5,3 +5,66 @@
   Created by Alexandr Evtodiy on 31.03.2021.
   
 */
+
+// TabBarController
+
+"search_tab" = "Search";
+"map_tab" = "Map of prices";
+"favorites_tab" = "Favorites";
+
+
+// MainViewController
+
+"main_from" = "Departure";
+"main_to" = "Destination";
+"main_search" = "Search";
+
+// PlaceViewController
+
+"cities" = "Cities";
+"airports" = "Airports";
+
+// FirstViewController
+
+"about_app_header" = "ABOUT THE APP";
+"tickets_header" = "AIRPORTS";
+"map_price_header" = "MAP OF PRICES";
+"favorites_header" = "FAVORITES";
+
+"about_app_describe" = "The application is designed to search for air tickets";
+"tickets_describe" = "Find the cheapest flights";
+"map_price_describe" = "View the price map";
+"favorites_describe" = "Save your selected tickets to favorites";
+
+"next_button" = "CONTINUE";
+"done_button" = "FINISH";
+
+
+// TicketsViewController
+
+"reduction_rubles" = "rub.";
+"favorites_tickets" = "By search";
+"favorites_map_prices" = "On the map";
+
+"tickets_title" = "Tickets";
+"add_to_favorite" = "Add to favorites";
+"remove_from_favorite" = "Remove from favorites";
+"remind_me" = "Remind me";
+"ticket_reminder" = "Ticket reminder";
+"notification_will_be_sent" = "The notification will be sent";
+"success" = "Success";
+
+// DetailsViewController
+
+"favorite_ticket" = "The favorite ticket";
+"date_of_add" = "Date added";
+
+// Alerts
+
+"error" = "Error";
+"tickets_not_found" = "No tickets were found for this direction";
+"close" = "Close";
+"not_set_place_arrival_or_departure" = "You must specify the place of departure and the place of arrival";
+"actions_with_tickets" = "Actions with the ticket";
+"actions_with_tickets_describe" = "What should I do with the selected ticket?";
+"not_determine_current_city" = "Couldn't determine the current city!";
